--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileOptions {
@@ -35,6 +36,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     //noinspection GradleCompatible
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:22.2.0'
