--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 
 android {
@@ -28,16 +29,29 @@ android {
 }
 
 dependencies {
+    def room_version = "2.2.5"
 
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5" // For Kotlin use kapt instead of annotationProcessor
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.2.5"
+
+    // optional - RxJava support for Room
+    implementation "androidx.room:room-rxjava2:2.2.5"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation "androidx.room:room-guava:2.2.5"
+
+    // Test helpers
+    testImplementation "androidx.room:room-testing:2.2.5"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     //noinspection GradleCompatible
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:22.2.0'
     //noinspection GradleCompatible
@@ -49,5 +63,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+}
+repositories {
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    mavenCentral()
 }
